<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.Signup.BusinessSignup">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/company_information"
                android:id="@+id/textView_business_signup_header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_company_name"
                />

            <EditText
                android:id="@+id/editText_business_signup_company_name"
                android:hint="@string/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_business_signup_header1" />

            <EditText
                android:id="@+id/editText_business_signup_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_email1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_company_name" />

            <EditText
                android:id="@+id/editText_business_signup_email1"
                android:hint="@string/e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_password1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_phone" />

            <EditText
                android:id="@+id/editText_business_signup_password1"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_password2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_email1" />

            <EditText
                android:id="@+id/editText_business_signup_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_office_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_password1" />

            <TextView
                android:text="@string/your_local_office"
                android:paddingTop="40dp"
                android:id="@+id/textView_business_signup_header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_password2"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_office_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <EditText
                android:id="@+id/editText_business_signup_office_name"
                android:hint="@string/office_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_office_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_business_signup_header2" />

            <EditText
                android:id="@+id/editText_business_signup_office_address"
                android:hint="@string/office_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toTopOf="@id/editText_business_signup_email2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_office_name" />

            <EditText
                android:id="@+id/editText_business_signup_email2"
                android:hint="@string/office_e_mail_optional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@id/button_signup_business_complete_signup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_office_address" />

            <Button
                android:id="@+id/button_signup_business_complete_signup"
                android:text="@string/sign_up"
                android:width="120dp"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_business_signup_email2"
                android:layout_height="wrap_content" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>