<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_schedule_pickup_display"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context=".activities.Dashboard.Fragments.SchedulePickupFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/editText_detail_schedule_pickup_name"
            android:hint="@string/pickup_name"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_detail_schedule_pickup_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_detail_schedule_pickup_date"
            android:hint="@string/pickup_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_detail_schedule_pickup_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_name" />

        <EditText
            android:id="@+id/editText_detail_schedule_pickup_time"
            android:hint="@string/pickup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_detail_schedule_pickup_office_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_detail_schedule_pickup_date" />

        <EditText
            android:id="@+id/editText_detail_schedule_pickup_office_name"
            android:hint="@string/office_name"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_detail_schedule_pickup_office_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_detail_schedule_pickup_time" />

        <EditText
            android:id="@+id/editText_detail_schedule_pickup_office_address"
            android:hint="@string/office_address"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_detail_schedule_pickup_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_detail_schedule_pickup_office_name" />



        <EditText
            android:id="@+id/editText_detail_schedule_pickup_instructions"
            android:hint="@string/pickup_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_detail_schedule_pickup_additional_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_office_address" />

        <EditText
            android:id="@+id/editText_detail_schedule_pickup_additional_notes"
            android:hint="@string/additional_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_detail_schedule_pickup_submit_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_instructions" />

        <Button
            android:id="@+id/button_detail_schedule_pickup_submit_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_changes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/editText_detail_schedule_pickup_date"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_additional_notes" />

        <Button
            android:id="@+id/button_detail_schedule_pickup_accept_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/accept_pickup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/editText_detail_schedule_pickup_date"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_additional_notes" />

        <Button
            android:id="@+id/button_detail_schedule_pickup_complete_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/mark_as_complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/editText_detail_schedule_pickup_date"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_additional_notes" />

        <Button
            android:id="@+id/button_detail_schedule_pickup_delete_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_this_pickup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/editText_detail_schedule_pickup_date"
            app:layout_constraintTop_toBottomOf="@id/editText_detail_schedule_pickup_additional_notes" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>