<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_schedule_pickup_display"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Dashboard.Fragments.SchedulePickupFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">


        <EditText
            android:id="@+id/editText_schedule_pickup_date"
            android:hint="@string/pickup_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_schedule_pickup_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_schedule_pickup_time"
            android:hint="@string/pickup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_schedule_pickup_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_schedule_pickup_date" />

        <EditText
            android:id="@+id/editText_schedule_pickup_instructions"
            android:hint="@string/pickup_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editText_schedule_pickup_additional_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_schedule_pickup_time" />

        <EditText
            android:id="@+id/editText_schedule_pickup_additional_notes"
            android:hint="@string/additional_notes_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/spinner_schedule_pickup_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_schedule_pickup_instructions" />

        <Spinner
            android:layout_marginTop="5dp"
            android:id="@+id/spinner_schedule_pickup_location"
            app:layout_constraintTop_toBottomOf="@id/editText_schedule_pickup_additional_notes"
            app:layout_constraintBottom_toTopOf="@id/button_detail_schedule_pickup_submit_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/button_detail_schedule_pickup_submit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit Pickup Order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/editText_schedule_pickup_date"
            app:layout_constraintTop_toBottomOf="@id/spinner_schedule_pickup_location" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>